# SketchApp_GTKmm

./: CMakeLists.txt  README.md
src/: main.cpp  sketchApp.cpp  sketchApp.h  sketchWindow.cpp  sketchWindow.h
